--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "mcp[cli]>=1.0.0",
     "uvicorn>=0.32.1",
     "openai>=1.66.3",
+    "streamlit>=1.43.2",
 ]
 
 [project.scripts]
